# AR_Puppet

./: .gitignore  CMakeLists.txt  README.txt  inversekinematics.cbp
CameraCalibration/: CMakeLists.txt  CameraCalibration  CameraCalibration.pro  Makefile  camera.yml  configuration.xml  default.xml  out_camera_data.xml
misc/: aruco-1.2.5.tgz
src/: CMakeCache.txt  CMakeLists.txt  Exercise-9.cpp  MarkerTracker.cpp  MarkerTracker.h  MarkerTracker_KK.cpp  MarkerTracker_KK.h  camera.yml  cmake_install.cmake  color.h  combineWindowHandler.h  glfunctions.h  linkedstructure.cpp  linkedstructure.h  main.cpp  main_temp.cpp  myBiped.h  myGL.h
temp/AugmentedReality/: DrawPrimitives.h  Exercise-9.cpp  Exercise-9_old.cpp  Exercise9  MarkerTracker.cpp  PoseEstimation.cpp  linkedstructure.cpp  myBiped.h
temp/OrigExercise9/: CMakeLists.txt  Exercise-9.cpp  MarkerTracker.cpp  MarkerTracker.h  MarkerTracker_old.h  Orig  OrigExercise9.pro  myGL.h
temp/OrigExercise9/src/: CMakeLists.txt  Exercise-9.cpp
